changed struct on webgpage of dag

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -5,29 +5,25 @@
     <title>Milestone 2 — Site Sourcing Agent</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Your UI styles -->
+    <!-- Your styles -->
     <link rel="stylesheet" href="styles.css" />
 
-    <!-- React + ReactDOM -->
+    <!-- React + ReactDOM (UMD) -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-    <!-- ✅ React Flow assets from jsDelivr (no CORS problem) -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reactflow@11.10.4/dist/style.css"
-    />
-    <script
-      crossorigin="anonymous"
-      src="https://cdn.jsdelivr.net/npm/reactflow@11.10.4/dist/umd/index.min.js"
-    ></script>
+    <!-- React Flow CSS + UMD (use jsDelivr to avoid unpkg 404/CORS) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reactflow@11.10.4/dist/style.css" />
+    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/reactflow@11.10.4/dist/umd/index.min.js"></script>
+
+    <!-- Dagre for auto-layout -->
     <script src="https://cdn.jsdelivr.net/npm/dagre@0.8.5/dist/dagre.min.js"></script>
   </head>
 
   <body>
     <div id="app"></div>
 
-    <!-- Your application logic (cache-busted) -->
-    <script src="app.js?v=10"></script>
+    <!-- Your app code (cache-busted) -->
+    <script src="app.js?v=11"></script>
   </body>
 </html>
